fdo#75328 Do DiscoveryService socket setup off the main thread.

Change-Id: I795f365981d8e7983c9f32531c9ec2ae4793c8f4